[package]
name = "asvz_registrar"
version = "0.1.0"
authors = ["niklasn <niklasneugebauer@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.6"